# k8s-notifier

./: .dockerignore  .editorconfig  Cargo.toml  Dockerfile  index.yaml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
charts/k8s-notifier/: Chart.yaml  values.yaml
charts/k8s-notifier/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/k8s-notifier/templates/tests/: test-connection.yaml
src/: lib.rs  main.rs  namespace.rs  resource.rs  watcher.rs
src/notifier/: log.rs  mod.rs  notifier.rs  slack.rs
src/resource/: mod.rs  resource.rs
src/resource/ext/: event.rs  mod.rs  node.rs  pod.rs
src/watcher/: mod.rs  notification.rs  watcher.rs
